인증서 정보를 볼수 있는 viewer 메뉴

--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,7 @@
         <a href="#" class="menu-item" data-content="ocsp">OCSP</a>
         <a href="#" class="menu-item" data-content="root-csr">루트인증서 CSR</a>
         <a href="#" class="menu-item" data-content="server-info">서버 정보</a>
+        <a href="#" class="menu-item" data-content="cert-parser">인증서 뷰어</a>
     </div>
     <div class="content" id="content-container">
         <!-- Dynamic content will be loaded here -->
